# dynamic-object-removal

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: pages.yml
configs/: compare.yaml  env_map.json  pipelines.yaml
configs/envs/: base.txt
modules/DiffuEraser/: env-diffueraser.txt  run_diffueraser.py
modules/DiffuEraser/diffueraser/: diffueraser.py
modules/FAST-VQA-and-FasterVQA/: env-fastvqa.txt  requirements.txt  vqa.py
modules/FAST-VQA-and-FasterVQA/fastvqa/: __init__.py  inference_data.py
modules/FAST-VQA-and-FasterVQA/fastvqa/models/: __init__.py  evaluator.py  head.py
modules/FAST-VQA-and-FasterVQA/options/fast/: f3dvqa-b.yml  fast-b.yml  fast-m.yml  fastervqa-ms.yml  fastervqa-mt.yml
modules/ProPainter/: env-propainter.txt
modules/Track-Anything/: track_anything.py
modules/VGGT4D/: demo_vggt4d.py  env-vggt.txt
modules/sam3/: env-sam3.txt
modules/xmem_tracker/: base_tracker.py  env-xmem.txt
page/: README.md  index.html
page/assets/: README.md
page/static/css/: index.css
page/static/js/: index.js
scripts/: draw_pipeline.py
src/object_removal/: __init__.py
src/object_removal/cli/: _argparse.py  compare.py  eval.py  inpaint.py  mask.py  mask_vis.py  track.py
src/object_removal/io/: compare_run.py  frames.py  layout.py  manifest.py  mask_vis.py  masks.py  pipeline_argv.py
src/object_removal/metrics/: __init__.py  fast_vqa.py  niqe.py
src/object_removal/stages/: eval_stage.py  inpaint_stage.py  mask_stage.py  track_stage.py
src/object_removal/utils/: video.py
(+16 files in other folders)
