[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-removal"
version = "0.0.0"
description = "Mask → track → inpaint → eval pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "opencv-python-headless>=4.8",
    "pyyaml>=6",
    "decord",
    "einops"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"object_removal.metrics" = ["niqe_pris_params.npz"]

